@@ -10,6 +10,9 @@ What's New in Python 2.7.13?
 Core and Builtins
 -----------------
 
+- Issue #19398: Extra slash no longer added to sys.path components in case of
+  empty compile-time PYTHONPATH components.
+
 - Issue #21720: Improve exception message when the type of fromlist is unicode.
   fromlist parameter of __import__() only accepts str in Python 2 and this
   will help to identify the problem especially when the unicode_literals
